--- a/src/components/AppNav/AppNav.module.scss
+++ b/src/components/AppNav/AppNav.module.scss
@@ -7,9 +7,9 @@
     font-style: normal;
 }
 
-.searchbar{
-    font-family: "Poppins" !important;
+.pageFonts{
+    font-family: "Poppins Regular" !important;
     font-weight: bold;
-    color: rgb(236, 231, 231);
+    color: rgb(117, 101, 101);
     font-style: normal;
 }
