--- a/src/styles/fonts/fonts.scss
+++ b/src/styles/fonts/fonts.scss
@@ -7,9 +7,17 @@
 }
   
 @font-face {
-    font-family: 'Poppins';
+    font-family: 'Poppins Regular';
     src: url('../assets/fonts/Poppins-Regular.woff') format('woff');
     font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'Poppins Bold';
+    src: url('../assets/fonts/Poppins-Bold.woff') format('woff');
+    font-weight: bold;
     font-style: normal;
 
 }
