--- a/src/components/Product/Product.module.scss
+++ b/src/components/Product/Product.module.scss
@@ -1,23 +1,41 @@
-.productCard{
-    background-image: url('https://images.unsplash.com/photo-1528756976078-3e6b883f9e43?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80');
+.productCard {
     width: 100%;
     height: 100vh;
-    background-position: center;
-    background-size: cover;
     display: flex;
     justify-content: center;
+
+    .cardGraphy {
+        color: white;
+        width: 70%;
+        margin-top: 30px;
+
+        .btnGroup {
+            display: flex;
+            margin: 5px;
+
+            .BoxIcon{
+                color:#757575;
+                background-color:white;
+                font-size: 40px;
+            }
+            .BoxIcon:hover{
+                color: white;
+                background-color: #757575;
+            }
+            .Avatar{
+                background-color:#757575
+            }
+        }
+    }
 }
-.cardGraphy{
-    color: white;
-    width: 70%;
-    margin-top: 30px;
-}
-.graphyfonth2{
-    font-family: 'Poppins Bold'!important;
-    font-weight: bold ;
+
+.graphyfonth2 {
+    font-family: 'Poppins Bold' !important;
+    font-weight: bold;
     font-style: normal;
 }
-.graphyfontp{
+
+.graphyfontp {
     font-family: 'Poppins' !important;
     font-weight: normal;
     font-style: normal;
